enterprise-chaos-hub/faults/kubernetes/pod-io-stress/k8s-fault.yaml
---
apiVersion: litmuschaos.io/v1alpha1
kind: K8sFault
metadata:
  name: pod-io-stress
spec:
  definition:
    targets:
      appinfo:
        applabel: ""
        appkind: ""
        appns: ""
    chaos:
      experiment: pod-io-stress
      serviceAccountName: litmus-admin
      image: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0
      imagePullPolicy: Always
      env:
        - name: TOTAL_CHAOS_DURATION
          value: "60" # in seconds

        ## specify the size as percentage of free space on the file system
        ## default value 90 (in percentage)
        - name: FILESYSTEM_UTILIZATION_PERCENTAGE
          value: "10"

        ## we can specify the size in Gigabyte (Gb) also in place of percentage of free space
        ## NOTE: for selecting this option FILESYSTEM_UTILIZATION_PERCENTAGE should be empty
        - name: FILESYSTEM_UTILIZATION_BYTES
          value: ""

        ## Total number of workers default value is 4
        - name: NUMBER_OF_WORKERS
          value: "4"

        # provide volume mount path
        - name: VOLUME_MOUNT_PATH
          value: ""

        ## Percentage of total pods to target
        - name: POD_AFFECTED_PERCENTAGE
          value: ""

        ## provide the cluster runtime
        - name: CONTAINER_RUNTIME
          value: "containerd"

        # provide the socket file path
        - name: SOCKET_PATH
          value: "/run/containerd/containerd.sock"

        - name: LIB_IMAGE
          value: artifactory.sdlc.ctl.gcp.db.com/dkr-public-local/dkr-io/harness/chaos-ddcr-faults:1.54.0

        ## Period to wait before and after injection of chaos in sec
        - name: RAMP_TIME
          value: ""

        - name: TARGET_CONTAINER
          value: ""

        - name: TARGET_PODS
          value: ""

        # To select pods on specific node(s)
        - name: NODE_LABEL
          value: ""

        ## it defines the sequence of chaos execution for multiple target pods
        ## supported values: serial, parallel
        - name: SEQUENCE
          value: "parallel"
